--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello this is osamah</h1>
+    <h1>this is an update on osamahverg branch</h1>
     <script src="app.js"></script>
 </body>
 </html>
